[package]
name = "aos"
version = "0.1.0"
edition = "2021"


# 禁用栈展开
[profile.dev]
#panic="abort"
[profile.release]
panic="abort"

[dependencies]
bootloader="0.9"
volatile="0.2.6"
spin={version="0.5.2"}
lazy_static={version="1.0",features=["spin_no_std"]}
x86_64={version="0.14.2"}
# 
uart_16550="0.2.0"
bit_field = "0.10.2"
pic8259="0.10.1"


[package.metadata.bootimage]
test-args=["-device","isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none"]
test-success-exit-code=33 #(0x10 << 1)|1
test-timeout=300 # in seconds



[[test]]
name="should_panic"
harness=false

[[test]]
name="stack_overflow"
harness=false
